@@ -13,8 +13,10 @@ package org.eclipse.rdf4j.sail.lmdb;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.ref.Cleaner;
 import java.nio.file.Files;
 
+import org.eclipse.rdf4j.common.concurrent.locks.diagnostics.ConcurrentCleaner;
 import org.eclipse.rdf4j.common.io.FileUtil;
 import org.eclipse.rdf4j.model.Model;
 import org.eclipse.rdf4j.model.impl.AbstractMemoryOverflowModel;
@@ -29,17 +31,45 @@ import org.slf4j.LoggerFactory;
  */
 abstract class MemoryOverflowModel extends AbstractMemoryOverflowModel<SailSourceModel> {
 
-	final Logger logger = LoggerFactory.getLogger(MemoryOverflowModel.class);
+	private static final Logger logger = LoggerFactory.getLogger(MemoryOverflowModel.class);
+	private static final ConcurrentCleaner CLEANER = new ConcurrentCleaner();
 
 	private transient File dataDir;
 
 	private transient LmdbSailStore store;
 
-	public MemoryOverflowModel(boolean verifyAdditions) {
+	private transient Cleaner.Cleanable overflowStoreCleanup;
+
+	public MemoryOverflowModel() {
 		super();
 	}
 
 	protected abstract LmdbSailStore createSailStore(File dataDir) throws IOException, SailException;
+
+	private static final class OverflowStoreCleaner implements Runnable {
+		private final LmdbSailStore store;
+		private final File dataDir;
+
+		private OverflowStoreCleaner(LmdbSailStore store, File dataDir) {
+			this.store = store;
+			this.dataDir = dataDir;
+		}
+
+		@Override
+		public void run() {
+			try {
+				store.close();
+			} catch (SailException e) {
+				logger.error(e.toString(), e);
+			} finally {
+				try {
+					FileUtil.deleteDir(dataDir);
+				} catch (IOException e) {
+					logger.error("Could not remove overflow directory {}", dataDir, e);
+				}
+			}
+		}
+	}
 
 	@Override
 	protected void overflowToDiskInner(Model memory) {
@@ -48,30 +78,8 @@ abstract class MemoryOverflowModel extends AbstractMemoryOverflowModel<SailSourc
 			dataDir = Files.createTempDirectory("model").toFile();
 			logger.debug("memory overflow using temp directory {}", dataDir);
 			store = createSailStore(dataDir);
-			disk = new SailSourceModel(store, memory) {
-
-				@Override
-				protected void finalize() throws Throwable {
-					logger.debug("finalizing {}", dataDir);
-					if (disk == this) {
-						try {
-							var localStore = store;
-							store = null;
-							if (localStore != null) {
-								localStore.close();
-							}
-						} catch (SailException e) {
-							logger.error(e.toString(), e);
-						} finally {
-							FileUtil.deleteDir(dataDir);
-							dataDir = null;
-							store = null;
-							disk = null;
-						}
-					}
-					super.finalize();
-				}
-			};
+			overflowStoreCleanup = CLEANER.register(this, new OverflowStoreCleaner(store, dataDir));
+			disk = new SailSourceModel(store, memory);
 		} catch (IOException | SailException e) {
 			String path = dataDir != null ? dataDir.getAbsolutePath() : "(unknown)";
 			logger.error("Error while writing to overflow directory " + path, e);
@@ -81,23 +89,14 @@ abstract class MemoryOverflowModel extends AbstractMemoryOverflowModel<SailSourc
 	@Override
 	protected synchronized void innerClose() {
 		try {
-			var localStore = store;
-			store = null;
-			if (localStore != null) {
-				localStore.close();
+			Cleaner.Cleanable cleanup = overflowStoreCleanup;
+			overflowStoreCleanup = null;
+			if (cleanup != null) {
+				cleanup.clean();
 			}
-		} catch (SailException e) {
-			logger.error(e.toString(), e);
 		} finally {
-			if (dataDir != null) {
-				try {
-					FileUtil.deleteDir(dataDir);
-				} catch (IOException e) {
-					logger.error("Could not remove overflow directory {}", dataDir, e);
-				}
-			}
-			dataDir = null;
 			store = null;
+			dataDir = null;
 		}
 	}
 }
